--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 /[Tt]emp/
 /[Oo]bj/
 /[Bb]uild/
-/[Bb]uilds/
+# /[Bb]uilds/
 /[Ll]ogs/
 /[Mm]emoryCaptures/
 
@@ -57,4 +57,4 @@ sysinfo.txt
 *.unitypackage
 
 # Crashlytics generated file
-crashlytics-build.properties 
+crashlytics-build.properties
